...
 * enum values that represent the screens in the app
 */
enum class StudyDistractorScreen(@StringRes val title: Int) {
    Login(title = R.string.screen_name_login),
    Register(title = R.string.screen_name_register),
    Maps(title = R.string.screen_name_maps),
    Friends(title = R.string.screen_name_friends),
    DistractionList(title = R.string.screen_name_distraction_list),
    Distraction(title = R.string.screen_name_distraction),
    DistractionStat(title = R.string.screen_name_distraction_stat),
    CreateDistraction(title = R.string.screen_name_create_distraction),
    History(title = R.string.screen_name_history),
    CreateUser(title = R.string.screen_name_create_user),
...
        remember{ MapViewModel(EventListServiceFirebase("Events"), DistractionListServiceFirebase("ProcrastinationActivities", "Tags"))}

    val drawerState = rememberDrawerState(DrawerValue.Closed)
    val scope = rememberCoroutineScope()
    val snackbarHostState = remember { SnackbarHostState() }

    ModalNavigationDrawer(
        drawerState = drawerState,
        modifier = Modifier.testTag("ModalNavigationDrawer"),
        gesturesEnabled = false,
        drawerContent = {
            ModalDrawerSheet(
                drawerContainerColor = MaterialTheme.colorScheme.inverseOnSurface,
                modifier = Modifier.testTag("ModalDrawerSheet").pointerInput(Unit) {
                    detectTapGestures(onTap = {
                        scope.launch {
                            if (drawerState.isOpen) {
                                drawerState.close()
...
                        }
                    })
                },
            ) {
                Spacer(Modifier.height(12.dp))
                Text(
                    text = "Study Distractor",
                    style = MaterialTheme.typography.headlineMedium,
                    modifier = Modifier.padding(NavigationDrawerItemDefaults.ItemPadding).testTag("app-bar-top__title")
                )
                Divider(
                    color = MaterialTheme.colorScheme.primary,
                    modifier = Modifier.padding(vertical = 12.dp)
                )

                NavigationDrawerItem(
                    icon = {Icon(
                        imageVector = Icons.Filled.HourglassFull,
                        contentDescription = "History"
                    )},
                    label = {Text("Distraction history")},
                    onClick = {
                        scope.launch { drawerState.close() }
                        navController.navigate(StudyDistractorScreen.History.name)
                              },
                    selected = false,
                    colors = NavigationDrawerItemDefaults.colors(
                        unselectedContainerColor = MaterialTheme.colorScheme.inverseOnSurface
                    ),
                    modifier = Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("app-bar-top__history-button")
                )

                NavigationDrawerItem(
                    icon = {Icon(
                        Icons.Outlined.AccessTime,
                        contentDescription = "History of events",
                    )},
                    label = {Text("Event history")},
                    onClick = {
                        scope.launch { drawerState.close() }
                        navController.navigate(StudyDistractorScreen.EventHistory.name)
                    },
                    selected = false,
                    colors = NavigationDrawerItemDefaults.colors(
                        unselectedContainerColor = MaterialTheme.colorScheme.inverseOnSurface
                    ),
                    modifier = Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("app-bar-top__event-history-button")
                )

                NavigationDrawerItem(
                    icon = {Icon(
                        Icons.Outlined.Group,
                        contentDescription = "List of friends",
...
                    selected = false,
                    colors = NavigationDrawerItemDefaults.colors(
                        unselectedContainerColor = MaterialTheme.colorScheme.inverseOnSurface
                    ),
                    modifier = Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("app-bar-top__friends-button")
                )

                NavigationDrawerItem(
                    icon = {Icon(
                        Icons.Outlined.AccountCircle,
                        contentDescription = "Home"
                    )},
                    label = {Text("Account")},
                    onClick = {
                        scope.launch { drawerState.close() }
                        navController.navigate(StudyDistractorScreen.Login.name)
                    },
                    selected = false,
                    colors = NavigationDrawerItemDefaults.colors(
                        unselectedContainerColor = MaterialTheme.colorScheme.inverseOnSurface
                    ),
                    modifier = Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("app-bar-top__account-button")
                )

            }
        }
    ) {
        Scaffold(
...
                        onEventCreated = {
                            Toast.makeText(context, "Event created", Toast.LENGTH_SHORT).show()
                        }
                    )
                }
                composable(route = StudyDistractorScreen.History.name) {
                    HistoryScreen(
                        historyViewModel = historyViewModel
                    )
                }

                composable(route = StudyDistractorScreen.DailyChallenge.name) {
                    dailyChallengeViewModel.updateDistractions() // reset to the current day
...
                composable(route = StudyDistractorScreen.DistractionStat.name){
                    DistractionStatScreen(
                        distractionStatViewModel,
                    )
                }
                composable(route = StudyDistractorScreen.Friends.name){
                    FriendsScreen(friendsViewModel)
                }
                composable(route = StudyDistractorScreen.Event.name) {
                    EventScreen(
                        eventViewModel = eventViewModel,
                        onOpenChatClick = {
                            chatEventViewModel.changeEventChat(eventViewModel.uiState.value.eventId)
...
                            eventViewModel.setEventId(event)
                            navController.navigate(StudyDistractorScreen.Event.name) },
                        eventListViewModel = eventListViewModel
                    )
                }
                composable(route = StudyDistractorScreen.EventHistory.name){
                    EventHistoryScreen(
                        eventHistoryViewModel = eventHistoryViewModel,
                        chatViewModel = chatEventViewModel,
                        onChatButtonClicked = {
                            navController.navigate(StudyDistractorScreen.ChatEvent.name)
                        }
                    )
...
