...
                        )
                    }

                }
                IconButton(
                    onClick = { openDrawer() },
                    modifier = Modifier.testTag("app-bar-top__drawer-button")
                ) {
                    Icon(
                        imageVector = Icons.Filled.Menu,
                        contentDescription = "Drawer"
                    )
                }
...
